<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bath"
    android:orientation="vertical"
    tools:context=".view.StartActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/maskan_logo_w"
            android:contentDescription="@string/logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/askan"
                android:textColor="@color/colorBase"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/it_s_easy_for_your_future"
                android:textColor="@color/colorBase"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <Button
        android:id="@+id/btn_sign_up_start"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/background_yellow"
        android:text="@string/create_account"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_google_start"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/background_red"

        android:text="@string/google"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_facebook_start"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/background_dark_blue"
        android:text="@string/facebook"
        android:textColor="#ffffff"
        android:textSize="15sp"

        android:textStyle="bold" />


    <TextView
        android:id="@+id/tv_sign_in_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#77333333"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/i_already_have_an_account"
        android:textColor="@color/colorBase"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#77333333"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/powered_by_2020_giraffe"
        android:textColor="@color/colorBase"
        android:textSize="12sp"
        android:textStyle="bold" />

</LinearLayout>