<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/background_white">


    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/iv_image_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_white"
                android:scaleType="centerCrop"
                android:src="@drawable/home"
                android:contentDescription="@string/image" />
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_price_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/en_price"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_area_item"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/en_area"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_rooms_item"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/en_b_bth"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_address_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/en_address"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_margin="5dp"
        android:visibility="visible"
        android:id="@+id/tv_date_item"
        android:layout_width="wrap_content"
        android:background="@drawable/background_gray"
        android:layout_height="wrap_content"
        android:text="@string/en_date"
        android:padding="2dp"
        android:textColor="@color/colorBase"
        android:textSize="15sp"
        android:textStyle="bold" />
</RelativeLayout>