<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/background_white"
    android:gravity="center"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/lll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:padding="10dp"
                android:id="@+id/btn_personal_tour"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/background_white"
                android:text="@string/personal"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:padding="10dp"
                android:id="@+id/btn_video_tour"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/background_white"
                android:text="@string/video_call"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/recycler_tour"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryDark" />



    </LinearLayout>
    <Button
        android:layout_alignBottom="@id/lll"
        android:id="@+id/btn_request_tour"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_yellow"
        android:text="@string/request"
        android:textColor="#ffffff"
        android:textSize="18sp" />
</RelativeLayout>